gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpserver-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "httpserver.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpserver
spec:
  hosts:
    - "httpserver.com"
  gateways:
    - httpserver-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: httpserver.com
            port:
              number: 8011
